--- a/assets/custom/styles.css
+++ b/assets/custom/styles.css
@@ -20,7 +20,7 @@ body * {
 .head_screen {
   display: flex;
   margin: 24px auto 0;
-  padding: 40px 16px 200px;
+  padding: 40px 16px 400px;
   width: 1320px;
   background: transparent;
 }
@@ -49,4 +49,45 @@ body * {
   display: block;
   color: #111;
   margin-top: 16px;
+}
+
+.cards {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  width: 1320px;
+  padding: 0 16px; 
+}
+
+.card {
+  background-color: white;
+  border-radius: 10px;
+  position: relative;
+  padding: 24px;
+  flex: 1;
+  margin-right: 24px;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
+}
+
+.card_img {
+  position: absolute;
+  left: 50%;
+  top: -115px;
+  transform: translate(-50%);
+  width: 200px;
+}
+
+.card_title {
+  margin: 70px 0 16px;
+  font-weight: bold;
+  font-size: 22px;
+  text-align: center;
+}
+
+.card_text {
+  margin-bottom: 40px;
+}
+
+.card_link {
+  margin-top: auto;
 }
