--- a/assets/custom/styles.css
+++ b/assets/custom/styles.css
@@ -74,6 +74,7 @@ body * {
   flex: 1;
   margin-right: 24px;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
+  margin-bottom: 400px;
 }
 
 .card_img {
@@ -105,7 +106,6 @@ footer {
   background-color: #B5AAC8;
   text-align: center;
   font-weight: 300;
-  margin-top: 400px;
 }
 
 .footer_logo img {
